--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,9 @@ steps:
 
 - script: |
     docker login -u _ -p $(HEROKU_TOKEN) registry.heroku.com
-    docker build -t registry.heroku.com/codersranktask/web .
+    docker build -t --iidfile imageid.txt registry.heroku.com/codersranktask/web .
+    echo "Docker Image ID is $(cat imageid.txt)"
     docker push registry.heroku.com/codersranktask/web
+    curl -X PATCH https://api.heroku.com/apps/codersranktask/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat imageid.txt)'" } ] }'
   workingDirectory: '$(modulePath)'
   displayName: 'Build and push Docker image'
